Add: styling for buttons

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -8,6 +8,8 @@
 $heading-font-stack: "Cormorant Garamond", serif;
 $body-font-stack: "Montserrat", "Inter", "Open Sans", "Helvetica Neue Light",
   "Helvetica Neue", "Helvetica", "Arial", sans-serif !default;
+$label-font-stack: "Montserrat", "Inter", "Open Sans", "Helvetica Neue Light",
+  "Helvetica Neue", "Helvetica", "Arial", sans-serif !default;
 
 $font-weight-light: 300;
 $font-weight-regular: 400;
