Add: beginnings of the Header component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,8 @@
 @import "base/fonts";
 @import "base/typography";
 
+@import "components/button";
+
 @import "layout/footer";
 @import "layout/header";
 @import "layout/navigation";
